Added the use of environment variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=FormRegistration
-spring.datasource.url=jdbc:mysql://localhost:3306/registeredusers
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.url=${db_url}
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_password}
 spring.jpa.hibernate.ddl-auto=none
